working on bottom nav view and viewpager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="your_phone">Your Phone</string>
     <string name="or_scan_your_thumb_to_continue">Or scan your Thumb to continue</string>
     <string name="todo">TODO</string>
+    <string name="your_options">Your Options</string>
 </resources>
