--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="or_scan_your_thumb_to_continue">Or scan your Thumb to continue</string>
     <string name="todo">TODO</string>
     <string name="your_options">Your Options</string>
+    <string name="account">Account</string>
 </resources>
